# normit-nav-app

./: README.md
config/profiles/Laboratory/tool/settings/: settings.ini
doc/: NorMIT_license.txt
install/Apple/: apple_install_readme.rtf
install/Linux/script/Ubuntu12.04/: Select_grub_startup_os.txt  core_dump_redirect.sh  ubuntu_epiphan_setup.sh  ubuntu_git_setup.sh  ubuntu_ndi_setup.sh  ubuntu_reformat_terminal.sh
install/Linux/script/Ubuntu12.04/AMD/: README_Ubuntu12.04_AMD
install/Linux/script/Ubuntu12.04/NVIDIA/: Nvidia_driver_install_instructions  ubuntu_install_nvidia.sh  ubuntu_install_readme.txt  ubuntu_nvidia_14.04.sh
org.custusx.normit.application/: CMakeLists.txt
org.custusx.normit.application/NorMIT-nav/: CMakeLists.txt  CustusX.rc  cxMain.cpp  normit_nav.qrc
org.custusx.normit.application/NorMIT-nav/icons/normit/: NorMIT.icns
org.custusx.normit.shared/: CMakeLists.txt  nmPluginActivator.cpp  nmPluginActivator.h  nmSharedGUIExtenderService.cpp  nmSharedGUIExtenderService.h
org.custusx.normit.shared/testing/: CMakeLists.txt  nmtestSharedPlugin.cpp  nmtestSharedPlugin.h
org.custusx.normit.shared/widgets/: nmNorMITWidget.cpp  nmNorMITWidget.h
script/: cxPrivateInstaller.py  cxPrivateReposActions.py
script/cxsetup/: cxCustusXFinder.py  cxFindCustusX.py  cxPrivateComponentAssembly.py  cxPrivateComponents.py  cxRepoHandler.py  cxUpdateToLatestCustusX.py
